# starman

./: Cargo.toml
assets/rocket/: rocket.mtl
src/: error.rs  light.rs  main.rs  planar_line_renderer.rs
src/builtin/: mod.rs  normals_material.rs  object_material.rs  planar_object_material.rs  uvs_material.rs
src/camera/: arc_ball.rs  camera.rs  first_person.rs  first_person_stereo.rs  fixed_view.rs  mod.rs
src/context/: context.rs  gl_context.rs  mod.rs
src/event/: event_manager.rs  mod.rs  window_event.rs
src/loader/: glb.rs  mod.rs  mtl.rs  obj.rs
src/planar_camera/: fixed_view.rs  planar_camera.rs  sidescroll.rs
src/post_processing/: grayscales.rs  mod.rs  oculus_stereo.rs  post_processing_effect.rs  sobel_edge_highlight.rs  waves.rs
src/renderer/: line_renderer.rs  mod.rs  point_renderer.rs  renderer.rs
src/resource/: effect.rs  framebuffer_manager.rs  gl_primitive.rs  gpu_vector.rs  material.rs  material_manager.rs  mesh.rs  mesh_manager.rs  mod.rs  planar_material_manager.rs  planar_mesh.rs  planar_mesh_manager.rs  texture_manager.rs  vertex_index.rs
src/scene/: mod.rs  object.rs  planar_object.rs  planar_scene_node.rs  scene_node.rs
src/text/: font.rs  glyph.rs  mod.rs  renderer.rs
src/window/: canvas.rs  gl_canvas.rs  mod.rs  state.rs  window.rs  window_cache.rs
