[package]
name = "starman"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.24"
nalgebra = "0.30"
ncollide3d = "0.33"
num-traits = "0.2"
glow = "0.12"
serde = "1"
serde_derive = "1"
bitflags = "1.2"
image = "0.24"
glutin = "0.26"
rusttype = { version = "0.8.3", features = ["gpu_cache"] }
either = "1"
gltf = "1.4.1"
egui = "0.22" 
egui_glow = "0.22"
